tests/ui/type/pattern_types/const_generics.stderr
error: "range patterns must have constant range start and end"
  --> $DIR/const_generics.rs:9:69
   |
LL | impl<const START: u32, const END: u32> Foo for pattern_type!(u32 is START..=END) {}
   |                                                                     ^^^^^

error: "range patterns must have constant range start and end"
  --> $DIR/const_generics.rs:9:77
   |
LL | impl<const START: u32, const END: u32> Foo for pattern_type!(u32 is START..=END) {}
   |                                                                             ^^^

error: aborting due to 2 previous errors

